--- a/rudy.css
+++ b/rudy.css
@@ -289,3 +289,6 @@ element.style {
     background: #bf616a;
     height: 100%;
 }
+.numberBadge-2s8kKX {
+  background-color: #af8f5c !important;
+}
