--- a/rudy.css
+++ b/rudy.css
@@ -292,3 +292,6 @@ element.style {
 .numberBadge-2s8kKX {
   background-color: #af8f5c !important;
 }
+.barButtonBase-2uLO1z {
+    color: #c9c8bf;
+}
