--- a/rudy.css
+++ b/rudy.css
@@ -311,3 +311,6 @@ element.style {
     -webkit-box-shadow: var(--elevation-low);
     box-shadow: var(--elevation-low);
 }
+.addInputWrapper-1BOZ3d {
+    background-color: #1a2b3e;
+}
