--- a/rudy.css
+++ b/rudy.css
@@ -320,3 +320,6 @@ element.style {
 .header-2BwW8b {
     color: #c9c8bf;
 }
+.headerName-fajvi9, .headerTagUsernameNoNickname-2_H881 {
+    color: #c9c8bf;
+}
