--- a/rudy.css
+++ b/rudy.css
@@ -323,3 +323,9 @@ element.style {
 .headerName-fajvi9, .headerTagUsernameNoNickname-2_H881 {
     color: #c9c8bf;
 }
+.headerNormal-T_seeN .customStatus-1bh2V9 {
+    color: #c9c8bf;
+}
+.headerTag-2pZJzA {
+    color: #c9c8bf;
+}
