--- a/rudy.css
+++ b/rudy.css
@@ -329,3 +329,9 @@ element.style {
 .headerTag-2pZJzA {
     color: #c9c8bf;
 }
+.header-3uLluP {
+    color: #c9c8bf;
+}
+.topSectionNormal-2-vo2m .username-3gJmXY {
+    color: #c9c8bf;
+}
