--- a/rudy.css
+++ b/rudy.css
@@ -335,3 +335,12 @@ element.style {
 .topSectionNormal-2-vo2m .username-3gJmXY {
     color: #c9c8bf;
 }
+.channelName-_v0rI4, .guildName-GKOCI8 {
+    color: #c9c8bf;
+}
+.base-1x0h_U {
+    color: #c9c8bf;
+}
+.header-2V-4Sw {
+    color: #c9c8bf;
+}
