--- a/rudy.css
+++ b/rudy.css
@@ -344,3 +344,12 @@ element.style {
 .header-2V-4Sw {
     color: #c9c8bf;
 }
+.username-31C1TQ {
+    color: #c9c8bf;
+}
+.defaultColor-1_ajX0 {
+    color: #c9c8bf;
+}
+.selected-3s45Ha.item-PXvHYJ, .selected-3s45Ha.item-PXvHYJ:hover {
+    color: #c9c8bf;
+}
