--- a/rudy.css
+++ b/rudy.css
@@ -353,3 +353,9 @@ element.style {
 .selected-3s45Ha.item-PXvHYJ, .selected-3s45Ha.item-PXvHYJ:hover {
     color: #c9c8bf;
 }
+.uploadModal-2ifh8j .footer-3mqk7D.hasSpoilers-1IRtQC {
+    background-color: #1a2b3e;
+}
+.theme-dark .uploadModal-2ifh8j {
+    background-color: #1a2735;
+}
