--- a/rudy.css
+++ b/rudy.css
@@ -265,7 +265,7 @@ element.style {
   background-color: #1d3045;
 }
 .root-217Brm {
-  background-color: #1d3045;
+    background-color: #1b2b3d;
 }
 .theme-dark .footer-2gL1pp {
   background-color: #1d3045;
