--- a/rudy.css
+++ b/rudy.css
@@ -364,3 +364,6 @@ element.style {
     background-color: #1a2b3e;
     box-shadow: 0 8px 16px #af8f5c;
 }
+.peopleColumn-29fq28 {
+    background-color: #1a2b3e;
+}
